argocd/patches/argocd-repo-server-ksops.yaml
# https://github.com/viaduct-ai/kustomize-sops#argo-cd-integration-
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server

spec:
  template:
    spec:
      # 1. Define an emptyDir volume which will hold the custom binary
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: age-key
          secret:
            secretName: age-key

      # 2. Use an init container to copy KSOPS into the emptyDir.
      # Keep Argo CD's bundled Kustomize to ensure compatibility
      # with its Helm version.
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /usr/local/bin/ksops
              name: custom-tools
              subPath: ksops
            - mountPath: /age-key/key.txt
              name: age-key
              subPath: key.txt
