argocd/patches/argocd-repo-server.yaml
# https://github.com/viaduct-ai/kustomize-sops#argo-cd-integration-
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server

spec:
  template:
    spec:
      # 1. Define an emptyDir volume which will hold the custom binaries
      volumes:
        - name: custom-tools
          emptyDir: {}
        - name: age-key
          secret:
            secretName: age-key

      # 2. Use an init container to download/copy custom binaries into the emptyDir
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - mountPath: /usr/local/bin/kustomize
              name: custom-tools
              subPath: kustomize
            - mountPath: /usr/local/bin/ksops
              name: custom-tools
              subPath: ksops
            - mountPath: /age-key/key.txt
              name: age-key
              subPath: key.txt
