argocd/patches/requirements.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller

spec:
  template:
    spec:
      containers:
        - name: argocd-application-controller
          resources:
            requests:
              cpu: "100m"
              memory: "300Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server

spec:
  template:
    spec:
      containers:
          - name: argocd-repo-server
            resources:
              requests:
                cpu: "50m"
                memory: "50Mi"
              limits:
                cpu: "1"
                memory: "300Mi"
